# vcollector

./: .gitignore  pyproject.toml  readme.md
vcollector/: bot.py  collector.py  formatter.py  middleware.py
vcollector/collectors/: __init__.py  file.py  logging.py
