[tool.poetry]
name = "vcollector"
version = "0.1.0"
description = "Collect messages from bot's dialogs and send to somewhere"
authors = ["prostomarkeloff"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.6.2"
vkwave = {git = "https://github.com/fscdev/vkwave.git"}
aiofile = "^1.5.2"

[tool.poetry.scripts]
vcollector-start = "vcollector.bot:run"

[tool.poetry.dev-dependencies]
mypy = "^0.770"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
